POWR-1178 update group node and my content views to properly display reviewer

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -3479,7 +3479,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: Author
+            label: Name
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -3492,8 +3492,6 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -4241,7 +4239,7 @@ display:
           exposed: true
           expose:
             operator_id: name_op
-            label: 'Video/Audio name contains'
+            label: 'Video name contains'
             description: ''
             use_operator: false
             operator: name_op
@@ -4253,9 +4251,6 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -4362,7 +4357,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: Author
+            label: Name
             description: '<blank>'
             use_operator: false
             operator: uid_op
@@ -4375,8 +4370,6 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -7290,7 +7283,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: Author
+            label: Name
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -7303,8 +7296,6 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
             reduce: false
           is_grouped: false
           group_info:
