--- a/web/sites/default/config/views.view.my_content.yml
+++ b/web/sites/default/config/views.view.my_content.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_reviewer
     - system.menu.editor-toolbar
     - user.role.authenticated
   module:
@@ -518,69 +517,6 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: field
-        field_reviewer:
-          id: field_reviewer
-          table: node__field_reviewer
-          field: field_reviewer
-          relationship: nid
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: true
-            text: '<br /><span class="text-nowrap">{{ field_reviewer }}</span>'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
-          settings:
-            link: true
-          group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         break:
           id: break
           table: content_lock
@@ -801,6 +737,71 @@ display:
           type_custom_false: '0'
           not: false
           plugin_id: boolean
+        name:
+          id: name
+          table: users_field_data
+          field: name
+          relationship: field_reviewer
+          group_type: group
+          admin_label: ''
+          label: Reviewer
+          exclude: true
+          alter:
+            alter_text: true
+            text: '<br /><span class="text-nowrap">{{ name }}</span>'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: user_name
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: user
+          entity_field: name
+          plugin_id: field
         moderation_state_1:
           id: moderation_state_1
           table: node_field_revision
@@ -812,7 +813,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "{% if moderation_state_1 == \"Published\" %}\r\n<span class=\"badge badge-success\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% elseif moderation_state_1 == \"In review\" %}\r\n<span class=\"badge badge-warning\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{{ field_reviewer }}\r\n{% elseif moderation_state_1 == \"Unpublished/Archived\" %}\r\n<span class=\"badge badge-danger\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% elseif moderation_state_1 == \"Draft\" %}\r\n<span class=\"badge badge-warning\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% else %}\r\n<span class=\"badge badge-light\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% endif %}\r\n{{ is_locked }}"
+            text: "{% if moderation_state_1 == \"Published\" %}\r\n<span class=\"badge badge-success\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% elseif moderation_state_1 == \"In review\" %}\r\n<span class=\"badge badge-warning\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{{ name }}\r\n{% elseif moderation_state_1 == \"Unpublished/Archived\" %}\r\n<span class=\"badge badge-danger\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% elseif moderation_state_1 == \"Draft\" %}\r\n<span class=\"badge badge-warning\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% else %}\r\n<span class=\"badge badge-light\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% endif %}\r\n{{ is_locked }}"
             make_link: false
             path: ''
             absolute: false
@@ -1048,10 +1049,10 @@ display:
           entity_type: node
           plugin_id: entity_operations
       filters:
-        latest_revision:
-          id: latest_revision
+        latest_translation_affected_revision:
+          id: latest_translation_affected_revision
           table: node_revision
-          field: latest_revision
+          field: latest_translation_affected_revision
           relationship: none
           group_type: group
           admin_label: ''
@@ -1084,7 +1085,7 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: node
-          plugin_id: latest_revision
+          plugin_id: latest_translation_affected_revision
         title:
           id: title
           table: node_field_data
@@ -1287,6 +1288,15 @@ display:
           entity_type: node
           entity_field: nid
           plugin_id: standard
+        field_reviewer:
+          id: field_reviewer
+          table: node_revision__field_reviewer
+          field: field_reviewer
+          relationship: none
+          group_type: group
+          admin_label: 'field_reviewer: User'
+          required: false
+          plugin_id: standard
         group_content:
           id: group_content
           table: node_field_data
@@ -1318,15 +1328,6 @@ display:
           required: true
           entity_type: group_content
           entity_field: gid
-          plugin_id: standard
-        field_reviewer:
-          id: field_reviewer
-          table: node__field_reviewer
-          field: field_reviewer
-          relationship: nid
-          group_type: group
-          admin_label: 'field_reviewer: User'
-          required: false
           plugin_id: standard
         group_content_id:
           id: group_content_id
@@ -1429,9 +1430,7 @@ display:
         - 'user.node_grants:view'
         - user.roles
       tags:
-        - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
-        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -1460,6 +1459,4 @@ display:
         - 'user.node_grants:view'
         - user.roles
       tags:
-        - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
-        - extensions
