installed and configured toc_filter module

--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,7 @@
         "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/time_field": "^1.1",
+        "drupal/toc_filter": "^2.0@beta",
         "drupal/transliterate_filenames": "^1.2",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
