--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -162,6 +162,8 @@ module:
   text: 0
   textarea_widget_for_text: 0
   time_field: 0
+  toc_api: 0
+  toc_filter: 0
   token: 0
   toolbar: 0
   transliterate_filenames: 0
