--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -6,6 +6,7 @@ dependencies:
     - editor
     - entity_embed
     - portland_media_embed_helper
+    - toc_filter
 name: 'Simplified editor with media embed'
 format: simplified_editor_with_media_embed
 weight: 0
@@ -16,7 +17,7 @@ filters:
     status: true
     weight: -50
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p class=""> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <a href hreflang !href accesskey id rel target title class=""> <pre> <i class=""> <drupal-entity data-* title alt data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button> <div class="">'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p class=""> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <a href hreflang !href accesskey id rel target title class=""> <pre> <i class=""> <div class=""> <drupal-entity data-* title alt data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button data-langcode>'
       filter_html_help: true
       filter_html_nofollow: false
   entity_embed:
@@ -86,3 +87,12 @@ filters:
     status: true
     weight: -49
     settings: {  }
+  toc_filter:
+    id: toc_filter
+    provider: toc_filter
+    status: true
+    weight: 0
+    settings:
+      type: default
+      auto: top
+      block: '0'
