--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -202,3 +202,5 @@ typed_data: 1.0.0-alpha3
 rules: 3.0.0-alpha4
 mimemail: 1.0.0-alpha2
 portland_moderation_helper: 0.1.0
+toc_api: 1.0.0-beta1
+toc_filter: 2.0.0-beta1
