--- a/web/sites/default/config/field.storage.group.field_topics.yml
+++ b/web/sites/default/config/field.storage.group.field_topics.yml
@@ -3,8 +3,12 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - group
     - taxonomy
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: group.field_topics
 field_name: field_topics
 entity_type: group
