POWR-1166 clean up labels and display modes

--- a/web/sites/default/config/views.view.bureaus_offices_list.yml
+++ b/web/sites/default/config/views.view.bureaus_offices_list.yml
@@ -1,6 +1,6 @@
 uuid: 8774c496-6ea0-47e5-9681-5af393255743
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - group.type.bureau_office
