--- a/web/sites/default/config/views.view.sitewide_bureau_office_index.yml
+++ b/web/sites/default/config/views.view.sitewide_bureau_office_index.yml
@@ -1,19 +1,16 @@
-uuid: bc2af439-e0bf-42b7-b51e-ef12c381c95c
+uuid: 939cf37a-5cb9-47bf-a771-c5ce65809c27
 langcode: en
 status: true
 dependencies:
   config:
     - search_api.index.full_index
     - system.menu.main
-    - taxonomy.vocabulary.group_type
-  content:
-    - 'taxonomy_term:group_type:c7237379-70a2-44a9-9500-d669b373b39b'
   module:
     - search_api
-id: bureaus_and_offices_index
-label: 'Sitewide: Bureaus and offices index'
+id: sitewide_bureau_office_index
+label: 'Sitewide: Bureau Office index'
 module: views
-description: 'List of all bureaus, offices, elected officials, and programs'
+description: 'List of all city services'
 tag: ''
 base_table: search_api_index_full_index
 base_field: search_api_id
@@ -79,23 +76,26 @@ display:
         options:
           view_modes:
             'entity:group':
+              advisory_group: default
               bureau_office: teaser
-              elected_official: teaser
-              group: teaser
-              program: teaser
-              project: teaser
+              elected_official: default
+              program: default
+              project: default
             'entity:node':
               charter_article: default
               charter_chapter: default
               charter_section: default
-              city_service: default
+              city_service: teaser
               code_chapter: default
               code_section: default
               code_title: default
+              council_document: default
+              council_meeting: default
               development_permit: default
               event: default
               news: default
               page: default
+              policy: default
             'entity:taxonomy_term':
               audience: default
               community_actions: default
@@ -157,50 +157,8 @@ display:
           multi_type: separator
           multi_separator: ', '
       filters:
-        type_2:
-          id: type_2
-          table: search_api_index_full_index
-          field: type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value:
-            min: ''
-            max: ''
-            value: elected_official
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: search_api_string
-        type_1:
-          id: type_1
+        type:
+          id: type
           table: search_api_index_full_index
           field: type
           relationship: none
@@ -250,7 +208,7 @@ display:
           admin_label: ''
           operator: and
           value: ''
-          group: 2
+          group: 1
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
@@ -267,6 +225,8 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -284,57 +244,12 @@ display:
           min_length: null
           fields:
             - rendered_item
-            - title
           plugin_id: search_api_fulltext
-        field_group_type:
-          id: field_group_type
-          table: search_api_index_full_index
-          field: field_group_type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value:
-            58: 58
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: true
-          type: select
-          limit: true
-          vid: group_type
-          hierarchy: false
-          error_message: true
-          plugin_id: search_api_term
       sorts:
-        group_title:
-          id: group_title
+        content_title:
+          id: content_title
           table: search_api_index_full_index
-          field: group_title
+          field: content_title
           relationship: none
           group_type: group
           admin_label: ''
@@ -353,7 +268,7 @@ display:
           group_type: group
           admin_label: ''
           empty: true
-          content: '@total bureaus and offices'
+          content: '@total bureaus and offices found'
           plugin_id: result
       footer: {  }
       empty: {  }
@@ -363,15 +278,13 @@ display:
       filter_groups:
         operator: AND
         groups:
-          1: OR
-          2: AND
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user
       tags: {  }
   page_1:
     display_plugin: page
@@ -400,5 +313,4 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-        - user
       tags: {  }
