POWR-1166 fixed the group admin view and sorts on bureau list

--- a/web/sites/default/config/views.view.sitewide_bureau_office_index.yml
+++ b/web/sites/default/config/views.view.sitewide_bureau_office_index.yml
@@ -76,7 +76,7 @@ display:
         options:
           view_modes:
             'entity:group':
-              advisory_group: default
+              advisory_group: teaser
               bureau_office: teaser
               elected_official: default
               program: default
@@ -243,13 +243,15 @@ display:
           parse_mode: terms
           min_length: null
           fields:
+            - group_field_search_keywords
+            - group_title
             - rendered_item
           plugin_id: search_api_fulltext
       sorts:
-        content_title:
-          id: content_title
+        portland_group_title_field:
+          id: portland_group_title_field
           table: search_api_index_full_index
-          field: content_title
+          field: portland_group_title_field
           relationship: none
           group_type: group
           admin_label: ''
