--- a/web/sites/default/config/views.view.admin_groups.yml
+++ b/web/sites/default/config/views.view.admin_groups.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.group.field_parent_group
     - system.menu.admin
   module:
     - content_lock
@@ -467,14 +468,14 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: field
-        label_1:
-          id: label_1
-          table: groups_field_data
-          field: label
-          relationship: field_parent_group
+        field_parent_group:
+          id: field_parent_group
+          table: group__field_parent_group
+          field: field_parent_group
+          relationship: none
           group_type: group
           admin_label: ''
-          label: 'Parent group'
+          label: Parent
           exclude: false
           alter:
             alter_text: false
@@ -515,11 +516,11 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: string
+          click_sort_column: target_id
+          type: entity_reference_label
           settings:
-            link_to_entity: true
-          group_column: value
+            link: true
+          group_column: target_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -529,8 +530,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: group
-          entity_field: label
           plugin_id: field
         timestamp:
           id: timestamp
@@ -855,48 +854,6 @@ display:
           entity_type: group
           entity_field: type
           plugin_id: bundle
-        label_1:
-          id: label_1
-          table: groups_field_data
-          field: label
-          relationship: field_parent_group
-          group_type: group
-          admin_label: ''
-          operator: contains
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: label_1_op
-            label: 'Parent group contains'
-            description: ''
-            use_operator: false
-            operator: label_1_op
-            identifier: label_1
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: group
-          entity_field: label
-          plugin_id: string
       sorts: {  }
       title: 'Admin: Groups'
       header:
@@ -936,22 +893,14 @@ display:
             value: 'No results found matching your criteria.'
             format: simple_editor
           plugin_id: text
-      relationships:
-        field_parent_group:
-          id: field_parent_group
-          table: group__field_parent_group
-          field: field_parent_group
-          relationship: none
-          group_type: group
-          admin_label: 'field_parent_group: Group'
-          required: false
-          plugin_id: standard
+      relationships: {  }
       arguments: {  }
       display_extenders: {  }
       filter_groups:
         operator: AND
         groups:
           1: AND
+      group_by: false
     cache_metadata:
       max-age: 0
       contexts:
@@ -960,7 +909,9 @@ display:
         - url
         - url.query_args
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.group.field_parent_group'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -986,4 +937,6 @@ display:
         - url
         - url.query_args
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.group.field_parent_group'
+        - extensions
