POWR-1166 respond to QA feedback

--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -21,9 +21,9 @@ searched_fields:
   term_name: term_name
 style: view_modes
 view_mode_configuration:
+  'entity:group_advisory_group': search_result
   'entity:group_bureau_office': search_result
   'entity:group_elected_official': search_result
-  'entity:group_group': search_result
   'entity:group_program': search_result
   'entity:group_project': search_result
   'entity:node_charter_article': search_result
@@ -33,10 +33,13 @@ view_mode_configuration:
   'entity:node_code_chapter': search_result
   'entity:node_code_section': search_result
   'entity:node_code_title': search_result
+  'entity:node_council_document': search_result
+  'entity:node_council_meeting': search_result
   'entity:node_development_permit': search_result
   'entity:node_event': search_result
   'entity:node_news': search_result
   'entity:node_page': search_result
+  'entity:node_policy': search_result
   'entity:taxonomy_term_audience': search_result
   'entity:taxonomy_term_community_actions': search_result
   'entity:taxonomy_term_topics': search_result
