--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -9,11 +9,13 @@ label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
+  - 'access audio_browser entity browser pages'
   - 'access audio_video_browser_embed entity browser pages'
   - 'access content'
   - 'access contextual links'
   - 'access document_browser entity browser pages'
   - 'access document_browser_embed entity browser pages'
+  - 'access featured_image entity browser pages'
   - 'access image_browser entity browser pages'
   - 'access image_browser_embed entity browser pages'
   - 'access image_table_browser entity browser pages'
