POWR-1186 consolidate child group view; update teaser display

--- a/web/sites/default/config/views.view.group_child_groups.yml
+++ b/web/sites/default/config/views.view.group_child_groups.yml
@@ -1,16 +1,17 @@
-uuid: f6aea100-c463-4690-abe9-5572878e7709
+uuid: 8f0457b6-7a71-4c6f-87de-f76c70c3927c
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.group.field_summary
+    - group.type.advisory_group
     - group.type.bureau_office
     - group.type.program
     - group.type.project
   module:
     - group
-id: group_offices_programs_projects
-label: 'Group: offices, programs, projects'
+id: group_child_groups
+label: 'Group: child groups'
 module: views
 description: 'A list of all the projects that are a child to another group'
 tag: Group
@@ -76,7 +77,9 @@ display:
           row_class: ''
           default_row_class: true
       row:
-        type: fields
+        type: 'entity:group'
+        options:
+          view_mode: teaser
       fields:
         label:
           id: label
@@ -328,6 +331,259 @@ display:
           entity_field: id
           plugin_id: group_id
       display_extenders: {  }
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - url
+        - url.query_args
+      tags:
+        - 'config:field.storage.group.field_summary'
+        - extensions
+  advisory_groups_block:
+    display_plugin: block
+    id: advisory_groups_block
+    display_title: 'Advisory Groups Block'
+    position: 8
+    display_options:
+      display_extenders: {  }
+      pager:
+        type: some
+        options:
+          items_per_page: 7
+          offset: 0
+      defaults:
+        pager: false
+        empty: false
+        fields: false
+        filters: false
+        filter_groups: false
+        use_more: false
+        use_more_always: false
+        use_more_text: false
+        link_display: false
+        link_url: false
+        title: false
+        style: false
+        row: false
+      empty: {  }
+      fields:
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: null
+          entity_field: label
+          plugin_id: field
+      block_hide_empty: true
+      display_description: ''
+      filters:
+        type:
+          id: type
+          table: groups_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            advisory_group: advisory_group
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: group
+          entity_field: type
+          plugin_id: bundle
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      use_more: true
+      use_more_always: true
+      use_more_text: 'more projects'
+      link_display: page_1
+      link_url: ''
+      title: 'Advisory Groups'
+      style:
+        type: html_list
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          type: ul
+          wrapper_class: item-list
+          class: ''
+      row:
+        type: fields
+        options: {  }
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - url
+      tags: {  }
+  advisory_groups_page:
+    display_plugin: page
+    id: advisory_groups_page
+    display_title: 'Advisory Groups Page'
+    position: 7
+    display_options:
+      display_extenders: {  }
+      display_description: ''
+      path: group/%group/advisory-groups
+      title: 'Advisory Groups'
+      defaults:
+        title: false
+        filters: false
+        filter_groups: false
+        empty: false
+      filters:
+        type:
+          id: type
+          table: groups_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            advisory_group: advisory_group
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: group
+          entity_field: type
+          plugin_id: bundle
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'No advisory groups found in this group.'
+            format: simple_editor
+          plugin_id: text
     cache_metadata:
       max-age: -1
       contexts:
