POWR-1139 fix config split

--- a/web/sites/default/config/config_split.config_split.config_prod.yml
+++ b/web/sites/default/config/config_split.config_split.config_prod.yml
@@ -1,6 +1,6 @@
 uuid: ff35b019-b243-4db9-b75f-55486f296460
 langcode: en
-status: false
+status: true
 dependencies: {  }
 id: config_prod
 label: 'Production Modules'
