--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -1,4 +1,6 @@
 default:
+  gherkin:
+    cache: ~
   suites:
     default:
       contexts:
@@ -6,6 +8,7 @@ default:
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
+        - Drupal\DrupalExtension\Context\MarkupContext
   extensions:
     Behat\MinkExtension:
       goutte: ~
@@ -24,10 +27,11 @@ default:
     Drupal\DrupalExtension:
       blackbox: ~
       region_map:
-        header: "#header"
-        tabs: "#tabs"
-        footer_first: "#footer_first"
-        footer_second: "#footer_second"
+        header: "div#header"
+        main_menu: "#block-cloudy-main-menu"
+        tabs: "div#tabs"
+        footer_first: "div#footer_first"
+        footer_second: "div#footer_second"
       selectors:
         message_selector: '.alert'
         error_message_selector: '.alert.alert-danger'
