POWR-1145 Disable featured images on search result listing

--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -46,8 +46,6 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      first:
-        - field_featured_media
       second:
         - 'bundle_field:node'
         - node_title
@@ -125,22 +123,6 @@ targetEntityType: node
 bundle: news
 mode: search_result
 content:
-  field_featured_media:
-    type: entity_reference_entity_view
-    weight: 0
-    region: first
-    label: hidden
-    settings:
-      view_mode: featured_large
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_published_on:
     type: datetime_default
     weight: 4
@@ -198,6 +180,7 @@ hidden:
   field_body_content: true
   field_feature_this_content: true
   field_feature_until: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
