--- a/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
@@ -44,8 +44,6 @@ third_party_settings:
         classes:
           layout_class: {  }
     regions:
-      first:
-        - field_featured_media
       second:
         - field_page_type
         - node_title
@@ -71,22 +69,6 @@ targetEntityType: node
 bundle: page
 mode: search_result
 content:
-  field_featured_media:
-    type: entity_reference_entity_view
-    weight: 0
-    region: first
-    label: hidden
-    settings:
-      view_mode: featured_large
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_page_type:
     type: entity_reference_label
     weight: 1
@@ -142,6 +124,7 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_popular: true
