POWR-1090 re-enabled vimeo and got it working, enabled vimeo domain in seckit

--- a/web/sites/default/config/seckit.settings.yml
+++ b/web/sites/default/config/seckit.settings.yml
@@ -7,7 +7,7 @@ seckit_xss:
     object-src: ''
     img-src: ''
     media-src: ''
-    frame-src: '''self'' https://www.youtube.com/embed/'
+    frame-src: '''self'' https://www.youtube.com/embed/ https://player.vimeo.com'
     frame-ancestors: ''
     child-src: ''
     font-src: ''
@@ -15,6 +15,10 @@ seckit_xss:
     report-uri: 'https://portlandgov.report-uri.com/r/d/csp/enforce'
     policy-uri: ''
     style-src: ''
+    vendor-prefix:
+      x: false
+      webkit: false
+    upgrade-req: false
   x_xss:
     seckit_x_xss_option_disable: Disabled
     seckit_x_xss_option_0: '0'
@@ -47,3 +51,6 @@ seckit_various:
   disable_autocomplete: false
 _core:
   default_config_hash: tEkqVdaa812lro0-CjtQGv-aeFNZ088m1F3yAbuy8hQ
+seckit_fp:
+  feature_policy: false
+  feature_policy_policy: ''
