--- a/web/sites/default/config/toc_api.toc_type.default.yml
+++ b/web/sites/default/config/toc_api.toc_type.default.yml
@@ -1,4 +1,4 @@
-uuid: a54836ab-a58d-49d4-8f28-59079422c6db
+uuid: 6e68f260-d498-4a0b-a612-9a88866a64fc
 langcode: en
 status: true
 dependencies: {  }
@@ -16,14 +16,13 @@ options:
   header_allowed_tags: '<em> <b> <del> <i> <mark> <s> <span> <strong> <sup> <sub> <em> <b> <del> <i> <mark> <s> <span> <strong> <sup> <sub>'
   header_id: title
   header_id_prefix: section
+  top_label: 'Back to top'
   top_min: 2
   top_max: 2
-  top_label: 'Back to top'
+  number_path: true
+  number_path_separator: .
+  number_path_truncate: true
   default:
     number_type: decimal
     number_prefix: ''
     number_suffix: ') '
-  number_path_separator: .
-  number_path: false
-  number_path_truncate: false
-  headers: {  }
