--- a/web/sites/default/config/filter.format.full_html.yml
+++ b/web/sites/default/config/filter.format.full_html.yml
@@ -15,32 +15,32 @@ filters:
     id: editor_file_reference
     provider: editor
     status: false
-    weight: -43
+    weight: -42
     settings: {  }
   entity_embed:
     id: entity_embed
     provider: entity_embed
     status: true
-    weight: -47
+    weight: -46
     settings: {  }
   filter_html_image_secure:
     id: filter_html_image_secure
     provider: filter
     status: false
-    weight: -40
+    weight: -39
     settings: {  }
   filter_url:
     id: filter_url
     provider: filter
     status: false
-    weight: -42
+    weight: -41
     settings:
       filter_url_length: 72
   filter_html:
     id: filter_html
     provider: filter
     status: false
-    weight: -45
+    weight: -44
     settings:
       allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <s> <hr> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button> <p> <h1> <pre> <a href hreflang !href accesskey id rel target title>'
       filter_html_help: true
@@ -49,49 +49,49 @@ filters:
     id: filter_autop
     provider: filter
     status: true
-    weight: -50
+    weight: -49
     settings: {  }
   filter_align:
     id: filter_align
     provider: filter
     status: true
-    weight: -48
+    weight: -47
     settings: {  }
   filter_caption:
     id: filter_caption
     provider: filter
     status: true
-    weight: -49
+    weight: -48
     settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
     provider: filter
     status: false
-    weight: -39
+    weight: -38
     settings: {  }
   filter_html_escape:
     id: filter_html_escape
     provider: filter
     status: false
-    weight: -44
+    weight: -43
     settings: {  }
   portland_media_embed_html_filter:
     id: portland_media_embed_html_filter
     provider: portland_media_embed_helper
     status: false
-    weight: -41
+    weight: -40
     settings: {  }
   portland_media_embed_helper_filter:
     id: portland_media_embed_helper_filter
     provider: portland_media_embed_helper
     status: true
-    weight: -46
+    weight: -45
     settings: {  }
   toc_filter:
     id: toc_filter
     provider: toc_filter
-    status: false
-    weight: -38
+    status: true
+    weight: -50
     settings:
       type: default
       auto: top
