POWR-1139 add explicit blacklist for clamav.settings" POWR-1139 Add explicit blacklist for clamav settings

--- a/web/sites/default/config/config_split.config_split.config_multidev.yml
+++ b/web/sites/default/config/config_split.config_split.config_multidev.yml
@@ -11,7 +11,8 @@ module:
   kint: 0
   clamav: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - clamav.settings
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
