--- a/web/sites/default/config/config_split.config_split.config_prod.yml
+++ b/web/sites/default/config/config_split.config_split.config_prod.yml
@@ -11,6 +11,7 @@ module:
 theme: {  }
 blacklist:
   - key.key.solr_core
+  - clamav.settings
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
