--- a/web/sites/default/config/config_split.config_split.config_test.yml
+++ b/web/sites/default/config/config_split.config_split.config_test.yml
@@ -9,7 +9,8 @@ folder: sites/default/config_test
 module:
   clamav: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - clamav.settings
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
