POWR-1227 Fixed view title for projects

--- a/web/sites/default/config/views.view.group_child_groups.yml
+++ b/web/sites/default/config/views.view.group_child_groups.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.teaser
     - field.storage.group.field_summary
     - group.type.advisory_group
     - group.type.bureau_office
@@ -1065,6 +1066,7 @@ display:
         link_url: false
         style: false
         row: false
+        title: false
       empty: {  }
       fields:
         label:
@@ -1197,6 +1199,7 @@ display:
       row:
         type: fields
         options: {  }
+      title: Projects
     cache_metadata:
       max-age: -1
       contexts:
@@ -1219,6 +1222,7 @@ display:
         row: true
         filters: false
         filter_groups: false
+        title: false
       display_description: ''
       filters:
         type:
@@ -1266,6 +1270,7 @@ display:
         operator: AND
         groups:
           1: AND
+      title: Projects
     cache_metadata:
       max-age: -1
       contexts:
