POWR-1104 configure location type, fields, entity browser

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -60,6 +60,11 @@ module:
   filter: 0
   fixed_block_content: 0
   focal_point: 0
+  geocoder: 0
+  geocoder_address: 0
+  geocoder_field: 0
+  geocoder_geofield: 0
+  geofield: 0
   gnode: 0
   google_analytics: 0
   group: 0
