--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -34,6 +34,8 @@ permissions:
   - 'delete any code_chapter content'
   - 'delete any code_section content'
   - 'delete any code_title content'
+  - 'delete any location content'
+  - 'delete any service_location content'
   - 'delete charter_article revisions'
   - 'delete charter_chapter revisions'
   - 'delete charter_section revisions'
@@ -64,6 +66,7 @@ permissions:
   - 'edit any guide content'
   - 'edit any image media'
   - 'edit any information content'
+  - 'edit any location content'
   - 'edit any news content'
   - 'edit any notification content'
   - 'edit any page content'
