--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -16,6 +16,7 @@ dependencies:
     - node.type.council_meeting
     - node.type.development_permit
     - node.type.event
+    - node.type.location
     - node.type.news
     - node.type.notification
     - node.type.page
@@ -106,6 +107,7 @@ type_settings:
       - council_meeting
       - development_permit
       - event
+      - location
       - news
       - notification
       - page
