--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,8 @@
         "drupal/field_permissions": "^1.0@RC",
         "drupal/fixed_block_content": "^1.0",
         "drupal/focal_point": "^1.0@beta",
+        "drupal/geocoder": "^2.2",
+        "drupal/geofield": "^1.3",
         "drupal/google_analytics": "^2.3",
         "drupal/group": "1.0.0-rc2",
         "drupal/groupmedia": "^2.0",
