--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -3,13 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser_embed
+    - entity_browser.browser.locations_browser
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
+    - field.field.node.news.field_location
     - field.field.node.news.field_published_on
     - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
@@ -17,6 +18,7 @@ dependencies:
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
+    - workflows.workflow.editorial
   module:
     - allowed_formats
     - chosen_field
@@ -33,7 +35,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -83,27 +85,42 @@ content:
     region: content
     third_party_settings: {  }
   field_group:
-    weight: 14
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 8
+    weight: 9
     region: content
     type: string_textfield
     settings:
       placeholder: ''
       size: 60
     third_party_settings: {  }
+  field_location:
+    weight: 7
+    settings:
+      entity_browser: locations_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_published_on:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_related_content:
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -112,7 +129,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 15
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -121,7 +138,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 26
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -149,13 +166,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -169,7 +186,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 9
+    weight: 10
     region: content
     settings:
       match_operator: CONTAINS
@@ -177,7 +194,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
