--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -202,3 +202,8 @@ typed_data: 1.0.0-alpha3
 rules: 3.0.0-alpha4
 mimemail: 1.0.0-alpha2
 portland_moderation_helper: 0.1.0
+geofield: 1.3.0
+geocoder: 2.2.0
+geocoder_field: 2.2.0
+geocoder_address: 2.2.0
+geocoder_geofield: 2.2.0
