--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -19,6 +19,7 @@ permissions:
   - 'access image_browser entity browser pages'
   - 'access image_browser_embed entity browser pages'
   - 'access image_table_browser entity browser pages'
+  - 'access locations_browser entity browser pages'
   - 'access media overview'
   - 'access media_browser entity browser pages'
   - 'access service_locations entity browser pages'
@@ -26,7 +27,10 @@ permissions:
   - 'access user profiles'
   - 'access video_browser entity browser pages'
   - 'break content lock'
+  - 'create location content'
   - 'create media'
+  - 'delete own location content'
+  - 'edit own location content'
   - 'revert charter_article revisions'
   - 'revert charter_chapter revisions'
   - 'revert charter_section revisions'
@@ -72,6 +76,7 @@ permissions:
   - 'view guide revisions'
   - 'view information revisions'
   - 'view latest version'
+  - 'view location revisions'
   - 'view media'
   - 'view news revisions'
   - 'view notification revisions'
